force-app/main/default/objects/Strategy_Customer_Volume_Revenue_Report__c/Strategy_Customer_Volume_Revenue_Report__c.object-meta.xml
<CustomObject>
    <label>战略客户数量收入汇总报表</label>
    <nameField>
        <label>Strategy Customer Volume And Revenue Sum</label>
        <type>Text</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>