force-app/main/default/objects/Strategy_Customer_Volume_Revenue_Report__c/fields/Average_Strategy_Customer_Rev_Same_Per__c.field-meta.xml
<CustomField>
    <fullName>Average_Strategy_Customer_Rev_Same_Per__c</fullName>
    <formula>IF(OR(N_M1_Year_Strategy_Customer_Qty__c=0), null, N_M1_Year_Strategy_Customer_Rev_Same_Per__c / N_M1_Year_Strategy_Customer_Qty__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Strategy Customer Rev(Same Per)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>