force-app/main/default/objects/Strategy_Customer_Volume_Revenue_Report__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <label>Sales Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>