force-app/main/default/objects/Strategy_Customer_Volume_Revenue_Report__c/fields/N_M1_Year_Strategy_Customer_Rev_Same_Per__c.field-meta.xml
<CustomField>
    <fullName>N_M1_Year_Strategy_Customer_Rev_Same_Per__c</fullName>
    <label>N-1 Year StrategyCustomerRev (Same Per)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>