force-app/main/default/objects/Strategy_Customer_Volume_Revenue_Report__c/fields/N_M1_Year_Strategy_Customer_Revenue__c.field-meta.xml
<CustomField>
    <fullName>N_M1_Year_Strategy_Customer_Revenue__c</fullName>
    <label>N-1 Year&apos;s Strategy Customer Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>