force-app/main/default/objects/Strategy_Customer_Volume_Revenue_Report__c/fields/N_M2_Year_Average_Strategy_Customer_Rev__c.field-meta.xml
<CustomField>
    <fullName>N_M2_Year_Average_Strategy_Customer_Rev__c</fullName>
    <formula>IF(OR(N_M2_Year_Strategy_Customer_Qty__c=0), null, N_M2_Year_Strategy_Customer_Revenue__c /  N_M2_Year_Strategy_Customer_Qty__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>N-2 Year&apos;s Average Strategy Customer Rev</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>