force-app/main/default/objects/Strategy_Customer_Volume_Revenue_Report__c/fields/YOY_Strategy_Customer_Qty__c.field-meta.xml
<CustomField>
    <fullName>YOY_Strategy_Customer_Qty__c</fullName>
    <formula>N_Year_Strategy_Customer_Qty__c - N_M1_Year_Strategy_Customer_Qty__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Y.O.Y Strategy Customer Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>