force-app/main/default/objects/Strategy_Customer_Volume_Revenue_Report__c/fields/YOY_Strategy_Customer_Revenue__c.field-meta.xml
<CustomField>
    <fullName>YOY_Strategy_Customer_Revenue__c</fullName>
    <formula>IF(OR(N_M1_Year_Strategy_Customer_Revenue__c=0), null, (N_Year_Strategy_Customer_Revenue__c / N_M1_Year_Strategy_Customer_Revenue__c ) - 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Y.O.Y Strategy Customer Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>